# Custom-Decentralized-Ledger

./: README.md  cargo.toml
lib/: Cargo.toml  README.md  tx.cbor
lib/src/: error.rs  lib.rs
lib/src/crypto/: mod.rs  private_key.rs  public_key.rs  signature.rs
lib/src/custom_sha_types/: hash.rs
lib/src/network/: message.rs
lib/src/types/: block.rs  block_header.rs  blockchain.rs  mod.rs  transaction.rs  transaction_input.rs  transaction_output.rs
lib/src/utils/: merkle_root.rs  mod.rs  saveable.rs
miner/: Cargo.toml  README.md
miner/src/: miner.rs
node/: Cargo.toml  README.md
node/src/: lib.rs
node/src/handler/: connection.rs
node/src/util/: chain_node.rs  cleanup.rs  cli.rs  connections.rs  download.rs  load.rs  mod.rs  save.rs  tests.rs
node/tests/: integration_tests.rs
wallet/: Cargo.toml  README.md
wallet/src/: lib.rs
wallet/src/models/: config.rs  core.rs  fee_config.rs  fee_type.rs  key.rs  loaded_key.rs  loaded_recipient.rs  mod.rs  recipient.rs  utxo_store.rs
wallet/src/util/: cli.rs  config.rs  mod.rs  transactions.rs
