[package]
name = "btclib"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = {version = "0.4.9" }
chrono = { version = "0.4.42", features = ["serde"] }
ciborium = { version = "0.2.2" }
clap = { version = "4.5.53", features = ["derive"] }
ecdsa = { version = "0.16.9", features = ["signing", "verifying", "serde", "pem"] }
env_logger = { version = "0.11" }
hex = { version = "0.4.3" }
k256 = { version = "0.13.4", features = ["serde", "pem"] }
log = { version = "0.4" }
rand = { version = "0.9.2" }
rand_core = {version = "0.6.4" }
serde = { version = "1.0.228", features = ["derive"] }
sha256 = { version = "1.6.0" }
spki = { version = "0.7.3", features = ["pem"] }
thiserror = {version = "2.0.17" }
tokio = { version = "1.48.0", features = ["full"] }
uint = { version = "0.10.0" }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

