[package]
name = "miner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100" }
btclib = { path = "../lib" }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
env_logger = { version = "0.11" }
flume = { version = "0.12.0" }
log = { version = "0.4" }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
