[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version =  "1.0.100" }
btclib = { version ="0.1.0", path = "../lib" }
chrono = { version = "0.4.42" }
clap = { version = "4.5.53", features = ["derive"] }
dashmap = { version = "6.1.0" }
env_logger = { version = "0.11" }
log = { version = "0.4" }
static_init = { version = "1.0.4" }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
