[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100" }
btclib = { version = "0.1.0", path = "../lib" }
clap = { version = "4.5.53", features = ["derive"] }
crossbeam-skiplist = { version = "0.1.3" }
cursive = { version = "0.21.1" }
env_logger = { version = "0.11" }
futures = { version = "0.3.31" }
kanal = { version = "0.1.1" }
log = { version = "0.4" }
serde = { version = "1.0.228", features = ["derive"] }
text-to-ascii-art = { version = "0.1.10" }
tokio = { version = "1.48.0", features = ["full"] }
toml = { version = "0.9.8" }
tracing = { version = "0.1.44" }
tracing-appender = { version = "0.2.4" }
tracing-subscriber = { version = "0.3.22", features=["env-filter", "fmt"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.8"
